wip: add all routes to swagger* refactor: change names of some routes
